# CG

./: README.md
ComputerGraphics/: CMakeLists.txt  main.cpp
ComputerGraphics/Lab_01/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  Polygon.cpp  Polygon.hpp  main.cpp
ComputerGraphics/Lab_02/: CMakeLists.txt
ComputerGraphics/Lab_02/glad/include/glad/: glad.h
ComputerGraphics/Lab_02/include/: Camera.h  Cylinder.h
ComputerGraphics/Lab_02/src/: Camera.cpp  Cylinder.cpp  main.cpp
ComputerGraphics/Lab_03/: CMakeLists.txt
ComputerGraphics/Lab_03/glad/src/: glad.c
ComputerGraphics/Lab_03/include/: Camera.h  Sphere.h
ComputerGraphics/Lab_03/src/: Camera.cpp  Sphere.cpp  main.cpp
ComputerGraphics/Lab_04/: CmakeLists.txt
ComputerGraphics/Lab_04/include/: Pyramid.h
ComputerGraphics/Lab_04/shaders/: fragment_shader.fs
ComputerGraphics/Lab_04/src/: Camera.cpp  Pyramid.cpp  main.cpp
